--- a/LibDialog/build.gradle
+++ b/LibDialog/build.gradle
@@ -1,9 +1,11 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'maven-publish'
+}
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
@@ -21,6 +23,19 @@ android {
     }
     kotlinOptions {
         jvmTarget = '11'
+    }
+}
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                groupId = 'com.mx.dialog'
+                artifactId = 'final'
+                version = '1.0.0'
+            }
+        }
     }
 }
 
