--- a/LibDialog/build.gradle
+++ b/LibDialog/build.gradle
@@ -24,6 +24,7 @@ android {
     kotlinOptions {
         jvmTarget = '11'
     }
+    namespace 'com.mx.dialog'
 }
 afterEvaluate {
     publishing {
