--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.8.10' apply false
 }
 
-task clean(type: Delete) {
+tasks.register('clean', Delete) {
     for (project in allprojects) {
-        delete project.buildDir
+        delete project.layout.buildDirectory
     }
 }
 ext {
@@ -15,5 +15,5 @@ ext {
     minSdkVersion = 19
 
     versionCode = 1
-    versionName = "1.6.5"
+    versionName = "1.6.6"
 }
